+jwt token, updated swagger
